# gh-yule-gitlog-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
animation/: Cargo.toml
animation/src/: lib.rs  lib_tests.rs
src/: main.rs  main_tests.rs
