[package]
name = "gh_rs_animated_gitlog"
version = "0.1.0"
edition = "2024"
description = "Github CLI extension to generate animated graph from logs"
authors = ["Saumil Patel <email2saumil2024@gmail.com>"]
license = "MIT"
repository = "https://github.com/SaumilP/gh-yule-gitlog-rs"
readme = "README.md"

[[bin]]
name = "gh-yule-gitlog-rs"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
rand = "0.8"
animation = { path = "animation" }
